src/test/ui/compile-fail-migration/borrowck/borrowck-thread-local-static-borrow-outlives-fn.ast.nll.stderr
error[E0597]: `FOO` does not live long enough
  --> $DIR/borrowck-thread-local-static-borrow-outlives-fn.rs:21:20
   |
LL |      assert_static(&FOO); //[ast]~ ERROR [E0597]
   |                    ^^^^ borrowed value does not live long enough
LL |                           //[mir]~^ ERROR [E0597]
LL | }
   | - `FOO` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
